migrates the sonfigs for keycloak version 26.1.4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,10 @@ services:
   keycloak:
       image: quay.io/keycloak/keycloak:26.1.4
       environment:
-        DB_VENDOR: POSTGRES
-        DB_ADDR: postgres
-        DB_DATABASE: YOUR_OWN_KEYCLOAK_DB_NAME
-        DB_USER: YOUR_OWN_KEYCLOAK_DB_USERNAME
-        DB_SCHEMA: public
-        DB_PASSWORD: YOUR_OWN_KEYCLOAK_DB_PASSWORD
+        KC_DB: postgres
+        KC_DB_URL: YOUR_OWN_KEYCLOAK_DB_JDBC_URL
+        KC_DB_USERNAME: YOUR_OWN_KEYCLOAK_DB_USERNAME
+        KC_DB_PASSWORD: YOUR_OWN_KEYCLOAK_DB_PASSWORD
         KC_BOOTSTRAP_ADMIN_USERNAME: YOUR_OWN_KEYCLOAK_DEFAULT_ADMIN_USERNAME
         KC_BOOTSTRAP_ADMIN_PASSWORD: YOUR_OWN_KEYCLOAK_DEFAULT_ADMIN_PASSWORD
       ports:
